--- a/miao/zen.html
+++ b/miao/zen.html
@@ -40,91 +40,88 @@
 	- don't rely on the extra divs at the bottom. Use ::before and ::after instead.
   -->
 
-<body id="css-zen-garden" style>
+<body id="css-zen-garden" >
   <div class="page-wrapper">
     <section class="intro" id="zen-intro">
       <header role="banner">
         <h1>
-          ::before
-          "CSS Zen Garden"
+          CSS Zen Garden
         </h1>
         <h2>
-          ::before
-          "The Beauty of "
+          The Beauty of 
           <abbr title="Cascading Styke Sheet">CSS</abbr>
-          " Design"
+          Design
         </h2>
       </header>
       <div class="summary" id="zen-sumary" role="article">
         <p>
-          "A demonstration of what can be accomplished through "
+          A demonstration of what can be accomplished through 
           <abbr title="Cascading Style Sheets">CSS</abbr>
-          "CSS-based design. Select any style sheet from the list to load it into this page"
+          CSS-based design. Select any style sheet from the list to load it into this page"
         </p>
         <p>
-          "Download the example "
+          Download the example 
           <a href="/example/index" title="This page's source HTMl code, not to be modified.">html file</a>
-          " and "
+          and 
           <a href="/example/style.css" title="This page's sample CSS, the  file you may modify.">css file</a>
         </p>
       </div>
       <div class="benefits" id="zen-benefits" role="article">
         <h3>Benefits</h3>
         <p>
-          "Why participate? For recognition, inspiration, and a resource we can all refer to showing peple how amazing"
+          Why participate? For recognition, inspiration, and a resource we can all refer to showing peple how amazing
           <abbr title="Cascading Style Sheets">CSS</abbr>
-          " really can be. This site serves as equal parts inspiration for those working on the web today, learning tool
-          for those who will be tomorrow, and gallery of future techniques we can all look forward to."
+          really can be. This site serves as equal parts inspiration for those working on the web today, learning tool
+          for those who will be tomorrow, and gallery of future techniques we can all look forward to.
       </div>
       <div class="requirements" id="zen-requrirements" role="article">
         <h3>requirements</h3>
         <p>
-          "Where possible, we would like to see mostly "
+          Where possible, we would like to see mostly 
           <abbr title="Cascading Style Sheets, levels 1 and 2">CSS 1 &amp; 2</abbr>
-          "usage."
+          usage.
           <abbr title="Cascading Style Sheets, levels 3 and 4">CSS 3 &amp; 4</abbr>
-          " should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen
-          Garden is about functional, practical "
+          should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen
+          Garden is about functional, practical 
           <abbr title="Cascading Style Sheets">CSS</abbr>
-          "and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we
-          have is that your "
+          and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we
+          have is that your
           <abbr title="Cascading Style Sheets">CSS</abbr>
-          " validates."
+          validates.
         </p>
         <p>
-          "Luckily, designing this way shows how well various browsers have implemented"
+          Luckily, designing this way shows how well various browsers have implemented
           <abbr title="Cascading Style Sheets">CSS</abbr>
-          "by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers.
+          by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers.
           Due to the sheer number of user agents on the web these days — especially when you factor in mobile —
           pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you
           can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by
-          over 90% of the population)."
+          over 90% of the population).
         </p>
         <p>
-          "We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to
+          We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to
           a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point
-          of needing another garden-related design."
+          of needing another garden-related design.
         </p>
         <p>
-          "This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with
-          limited exceptions, see "
+          This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with
+          limited exceptions, see 
           <a href="http://www.mezzoblue.com/zengarden/submit/guidelines/">submission guidelines</a>
-          "), but we ask you release your "
+          but we ask you release your 
           <abbr title="Cascading Style Sheets">CSS</abbr>
-          " under a Creative Commons license identical to the "
+           under a Creative Commons license identical to the 
           <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
             title="View the Zen Garden's license information.">one on this site</a>
-          " so that others may learn from your work."
+          so that others may learn from your work.
         </p>
         <p role="contentinfo">
-          "By "
+          By 
           <a href="http://www.mezzblue.com/">Dace Shea</a>
-          ". Now available: "
+          . Now available: 
           <a href="http://www.mediatemple.net/">mediatemple</a>
-          ". Now available: "
+          . Now available: 
           <a href="http://www.amazon.com/exec/obidos/ASIn/0321303474/mazzoblue-20/"></a>
-          Zen Garden, the book </a>
-          "."
+          Zen Garden, the book </a>.
         </p>
       </div>
       <footer>
