--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -96,6 +96,10 @@
     margin-left: 30px;
   }
 
+  .c span:hover {
+    background-color: red;
+  }
+
   hr {
     width: 600px;
     margin: auto;
