--- a/miao/css-sprite.html
+++ b/miao/css-sprite.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <style>
-  div {
+  .move-start {
     background-image: url(https://tse1-mm.cn.bing.net/th/id/OIP.e2KeU0w2ETzsQoLlZHsb7AHaHa?pid=Api&rs=1);
     width: 60px;
     height: 70px;
@@ -15,7 +15,7 @@
     border: 1px black solid;
   }
 
-  .a {
+  .move-a {
     background-image: url(https://tse1-mm.cn.bing.net/th/id/OIP.e2KeU0w2ETzsQoLlZHsb7AHaHa?pid=Api&rs=1);
     width: 60px;
     height: 70px;
@@ -23,7 +23,7 @@
     border: 1px red solid;
   }
 
-  .b {
+  .move-b {
     background-image: url(https://tse1-mm.cn.bing.net/th/id/OIP.e2KeU0w2ETzsQoLlZHsb7AHaHa?pid=Api&rs=1);
     width: 60px;
     height: 70px;
@@ -31,7 +31,7 @@
     border: 1px red solid;
   }
 
-  .c {
+  .move-c {
     background-image: url(https://tse1-mm.cn.bing.net/th/id/OIP.e2KeU0w2ETzsQoLlZHsb7AHaHa?pid=Api&rs=1);
     width: 60px;
     height: 70px;
@@ -41,10 +41,10 @@
 </style>
 
 <body>
-  <div></div>
-  <section class="a"></section>
-  <section class="b"></section>
-  <section class="c"></section>
+  <section class="move-start"></section>
+  <section class="move-a"></section>
+  <section class="move-b"></section>
+  <section class="move-c"></section>
 
 </body>
 
