--- a/miao/abs-center.html
+++ b/miao/abs-center.html
@@ -7,9 +7,14 @@
   <title>Document</title>
 </head>
 <style>
+  * {
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 1px red
+  }
+
   .a {
     position: relative;
-    height: 500px;
+    height: 300px;
     /* 外层定高 */
     border: 3px solid black;
     width: 500px;
@@ -17,10 +22,10 @@
   }
 
   .b {
-    width: 200px;
+    /* 使用定位 */
+    width: 50%;
     position: absolute;
-    height: 130px;
-
+    height: 50%;
     left: 0;
     top: 0;
     bottom: 0;
@@ -31,23 +36,32 @@
   }
 
   .c {
-    position: relative;
-
-    border: 3px solid black;
-    margin: auto;
-
+    /* 使用表内 */
+    width: 200px;
+    height: 300px;
+    display: table-cell;
+    vertical-align: middle;
   }
 
   .d {
-    width: 200px;
-    display: block;
-    height: 130px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 50%;
+    margin: auto;
     border: 3px black solid;
+  }
 
+  .e {
+    /* 行内元素 */
+    width: 200px;
+    height: 300px;
+    line-height: 300px;
+    text-align: center;
+  }
+
+  .f {
+    vertical-align: middle;
+    line-height: normal;
+    display: inline-block;
+    width: 50%;
   }
 </style>
 
@@ -58,11 +72,17 @@
     </span>
   </div>
   <hr>
-  <div class="c">
-    <span class="d">Lorem ipsum dolor sit amet
+  <section class="c">
+    <div class="d">Lorem ipsum dolor sit amet
       consectetur adipisicing elit. Odio, debitis.
-    </span>
-  </div>
+    </div>
+  </section>
+  <hr>
+  <section class="e">
+    <div class="f">Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Odio, debitis.
+    </div>
+  </section>
 
 </body>
 
