--- a/miao/div-img-contain.html
+++ b/miao/div-img-contain.html
@@ -9,7 +9,9 @@
 <style>
   * {
     background-color: rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 1px red
+    box-shadow: 0 0 1px red;
+    font-size: 0px;
+    ;
   }
 
   hr {
