--- a/miao/radio-slider.html
+++ b/miao/radio-slider.html
@@ -36,8 +36,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
-    height: 100%;
     opacity: 0;
     transition: 1s;
 
@@ -110,7 +110,13 @@
     z-index: 20;
     padding: 2px;
     margin: auto;
+    width: 100px;
+    height: 20px;
+    background-color: blue;
+    border-radius: 2px;
   }
+
+  div {}
 
   section div label {
     display: inline-block;
