--- a/miao/bootstrap-table.html
+++ b/miao/bootstrap-table.html
@@ -67,10 +67,9 @@
   }
 
   .table .row~td {
-    border-top: rgba(222, 226, 230, 1) 0px solid;
+    border-top: rgba(222, 226, 230, 1)1px solid;
     height: 50px;
     box-sizing: border-box;
-
   }
 
   .table-borderless {
@@ -82,6 +81,10 @@
   .table-borderless .row,
   .table-borderless .col {
     border-style: none;
+  }
+
+  .table-borderless .row~td {
+    border-top: rgba(222, 226, 230, 0.5) 0px solid;
   }
 
   .table-sm {
@@ -97,13 +100,19 @@
     background-color: rgba(34, 34, 34, 0.8);
   }
 
+  .table-dark .row~td {
+    border-top: rgba(222, 226, 230, 0.5) 0px solid;
+
+
+  }
+
   .table-hover tbody tr:hover {
     background-color: rgba(222, 226, 230, 0.7);
   }
 </style>
 
 <body>
-  <table class="table table-bordered table-borderless table-hover table-striped table-dark table-sm">
+  <table class="table xtable-bordered xtable-borderless xtable-dark xtable-hover xtable-sm xtable-striped">
     <thead>
       <tr>
         <th class="col">#</th>
