--- a/miao/ios-checkbox.html
+++ b/miao/ios-checkbox.html
@@ -21,37 +21,40 @@
   }
 
   .circle {
-    border-radius: 50%;
+    border-radius: 60px;
     height: 90px;
-    width: 90px;
-    background-color: azure;
+    width: 50px;
+    background-color: white;
     position: absolute;
     left: 0;
     top: 5px;
     right: 0px;
-    transition: 2s;
-    box-shadow: rgba(169, 169, 169, 0.5) 3px 3px 3px;
+    padding: 0 20px;
+    box-shadow: rgba(169, 169, 169, 0.5) 0px 0px 15px;
+
   }
 
   input:checked+label .circle {
-    left: 110px;
-    transition: 0.5s ease-in-out;
+    width: 90px;
+    padding: 0 0;
+    left: 107px;
+    transition: left 1s, padding 1s, width 0.5s;
 
   }
 
   input:checked+.border {
-
-    transition: 1s ease-in-out;
-    box-shadow: rgb(2, 196, 255, 1) 0px 0px 0px 70px inset;
+    transition: 0.5s ease-in-out;
+    box-shadow: rgb(48, 243, 77, 1) 0px 0px 3px 70px inset;
+    border: rgba(48, 243, 77, 1);
   }
 
   input+label .circle {
-    transition: 1s ease-in-out;
+    transition: left 1s, padding 1s, width 0.5s 0.5s;
   }
 
   input+.border {
-    background-color: azure;
-    transition: 1s ease-in-out;
+    background-color: white;
+    transition: 0.5s ease-in-out;
   }
 </style>
 
