--- a/miao/ios-checkbox.html
+++ b/miao/ios-checkbox.html
@@ -49,7 +49,7 @@
   }
 
   input+label .circle {
-    transition: left 1s, padding 1s, width 0.5s 0.5s;
+    transition: left 1s, padding 1s, width 0.5s;
   }
 
   input+.border {
