--- a/miao/mi/mi.html
+++ b/miao/mi/mi.html
@@ -70,7 +70,7 @@
                                                         <li>卡丁车</li>
                                                         <li>全部商品</li>
                                                         <li>耳机</li>
-                                                        <li>空调</li>
+                                                        <li>空调</li>b
                                                 </ul>
                                         </div>
                                         <button>search</button>
@@ -239,50 +239,68 @@
                                 <input class="slider-hidden" type="radio" name="s" id="s-2">
                                 <input class="slider-hidden" type="radio" name="s" id="s-3">
                                 <input class="slider-hidden" type="radio" name="s" id="s-4">
-
                                 <ul class="selection">
-                                        <li><a href="#"> <img class="shower-radio"
+                                        <li>
+                                                <a href="#">
+                                                        <img class="shower-radio"
                                                                 src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/676ddccc418842904f82ccdc66bbaa34.jpg?w=2452&h=920"
-                                                                alt=""></a></li>
-                                        <label class="pre" for="s-4"><img
-                                                        src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                        alt=""></label>
-                                        <label class="next" for="s-2"><img
-                                                        src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                        alt=""></label>
-                                        <li><a href="#"> <img class="shower-radio"
+                                                                alt="">
+                                                </a>
+                                                <label class="pre" for="s-4">
+                                                        <img src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt="">
+                                                </label>
+                                                <label class="next" for="s-2">
+                                                        <img src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt="">
+                                                </label>
+                                        </li>
+
+                                        <li>
+                                                <a href="#">
+                                                        <img class="shower-radio"
                                                                 src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/cf6ba4d372b80e939104cf369f14139a.jpg?thumb=1&w=1226&h=460&f=webp&q=90"
-                                                                alt=""></a></li>
-                                        <label class="pre" for="s-1"></label><img
-                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                alt=""></label>
-                                        <label class="next" for="s-3"></label><img
-                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                alt=""></label>
+                                                                alt="">
+                                                </a>
+                                                <label class="pre" for="s-1">
+                                                        <img src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt="">
+                                                </label>
+                                                <label class="next" for="s-3">
+                                                        <img src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt="">
+                                                </label>
+                                        </li>
+
                                         <li><a href="#"> <img class="shower-radio"
                                                                 src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/449a09c7d198e08f690caf118902bb06.jpg?thumb=1&w=1226&h=460&f=webp&q=90"
-                                                                alt=""></a></li>
-                                        <label class="pre" for="s-2"></label><img
-                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                alt=""></label>
-                                        <label class="next" for="s-4"></label><img
-                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                alt=""></label>
+                                                                alt=""></a>
+                                                <label class="pre" for="s-2"><img
+                                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt=""></label>
+                                                <label class="next" for="s-4"><img
+                                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt=""></label>
+                                        </li>
+
                                         <li><a href="#"> <img class="shower-radio"
                                                                 src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/0ef4160c861b998239bce9adb82341e7.jpg?thumb=1&w=1226&h=460&f=webp&q=90"
-                                                                alt=""></a></li>
-                                        <label class="pre" for="s-3"></label><img
-                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                alt=""></label>
-                                        <label class="next" for="s-1"></label><img
-                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
-                                                alt=""></label>
+                                                                alt=""></a>
+                                                <label class="pre" for="s-3"><img
+                                                                src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt=""></label>
+                                                <label class="next" for="s-1">
+                                                        <img src="https://i1.mifile.cn/f/i/2014/cn/icon/icon-slides.png"
+                                                                alt="">
+                                                </label></li>
+
                                 </ul>
                                 <div class="indicator">
                                         <label for="s-1"></label>
                                         <label for="s-2"></label>
                                         <label for="s-3"></label>
                                         <label for="s-4"></label>
+
                                 </div>
                         </div>
                         <div class="site-category">
