--- a/miao/balloon-css.html
+++ b/miao/balloon-css.html
@@ -15,6 +15,41 @@
     position: relative;
   }
 
+  button {
+    position: absolute;
+    left: 30%;
+    width: 180px;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    border: none;
+    border-radius: 3px;
+    background: red;
+    transform-origin: center center;
+  }
+
+  button:nth-child(1) {
+    top: 100px;
+    background: red;
+  }
+
+  button:nth-child(2) {
+    top: 200px;
+    background: blue;
+  }
+
+  button:nth-child(3) {
+    top: 300px;
+    background: lime;
+  }
+
+  button:nth-child(4) {
+    top: 500px;
+    background: gray;
+  }
+
   /* up */
   button[data-balloon-pos="up"]::before {
     content: '';
@@ -41,21 +76,7 @@
     transition: 0.5s;
   }
 
-  button[data-balloon-pos="up"] {
-    position: absolute;
-    top: 100px;
-    left: 30%;
-    width: 180px;
-    padding: 10px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    border: none;
-    border-radius: 3px;
-    background: red;
-    transform-origin: center center;
-  }
+
 
 
 
@@ -110,21 +131,7 @@
     transition: 0.5s;
   }
 
-  button[data-balloon-pos="left"] {
-    position: absolute;
-    top: 200px;
-    left: 30%;
-    width: 180px;
-    padding: 10px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    border: none;
-    border-radius: 3px;
-    background: blue;
-    transform-origin: center center;
-  }
+
 
   button[data-balloon-pos="left"]:focus::before {
 
@@ -176,21 +183,7 @@
     transition: 0.5s;
   }
 
-  button[data-balloon-pos="up-left"] {
-    position: absolute;
-    top: 300px;
-    left: 30%;
-    width: 180px;
-    padding: 10px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    border: none;
-    border-radius: 3px;
-    background: lime;
-    transform-origin: center center;
-  }
+
 
   button[data-balloon-pos="up-left"]:focus::before {
     top: -20%;
@@ -243,23 +236,6 @@
     transition: 0.5s;
   }
 
-  button[data-balloon-length="large"] {
-    position: absolute;
-    top: 500px;
-    left: 30%;
-    width: 180px;
-    padding: 10px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #fff;
-    text-align: center;
-    border: none;
-    border-radius: 3px;
-    background: gray;
-    transform-origin: center center;
-  }
-
-
 
 
   button[data-balloon-length="large"]:focus::before {
@@ -287,7 +263,7 @@
 
 <body>
   <div>
-    <button aria-label="Whats up!" data-balloon-pos="up">Hover me!</button>
+    <button aria-label="Whats up!" data-balloon-pos="up-left" data-balloon-length="large">Hover me!</button>
     <button aria-label="Whats up!" data-balloon-pos="left">Hover me!</button>
     <button aria-label="Whats up!" data-balloon-pos="up-left">Hover me!</button>
     <button data-balloon-length="large"
